# pyfitparquet

./: .gitattributes  .gitignore  404.html  CMakeLists.txt  FitToParquetTest.ipynb  MANIFEST.in  Makefile  README.md  build-arrow.sh  build-fit-ingest.sh  build-pyfitparquet.sh  build.sh  config.cpp  config.h  databike.yml  environment-dev.yml  environment.yml  example.py  fitparquet.cc  fitparquet.cpp  index.html  mkdocs.yml  parquet_config.yml  pyfitparquet.cc  pyfitparquet.yml  search.html  setup.py  uninstall.sh
.scripts/: README.md  cbuilderenv.yml  clean.sh  docker_build.sh  uninstall.sh
.scripts/recipes/: conda_build_config.yaml  meta.yaml
cpp/: CMakeLists.txt  config.h  fitparquet.cc  fitparquet.h  fittransformer.cc  fittransformer.h  pyfitparquet.cc  pyfitparquet_so.cc
cpp/FitCppSDK_21.40.00/cpp/examples/: decode.cpp
docs/: index.md
notebooks/: ETL-Test.ipynb  FitToParquetTest.ipynb  PySpark-Parquet-Test.ipynb  SerializationTest.ipynb  TcxToParquetTest.ipynb  workbook.ipynb
pyfitparquet/: loadconfig.py  mapping_config.yml  parquet_config.yml  tcxtransformer.py  transformer.py
pyfitparquet/FitCppSDK_21.47.00/: GARMIN_FIT_SDK_LICENSE
pyfitparquet/cpp/: CMakeLists.txt  config.h  fittransformer.cc  fittransformer_so.cc
python/: genmappings.py  loadconfig.py  mappings.py  pyfitparquet.py  tcxtransformer.py
scripts/: Dockerfile  build-arrow.sh  build.sh  build_arrow.sh  conda_build.sh  docker_build.sh  docker_endpoint.sh
scripts/recipes/: conda_build_config.yaml  meta.yaml
search/: search_index.json
test/: test_pyfitparquet.py
test/fixtures/: 45_min_HIIT_Hills_Ride.tcx  45_min_Power_Zone_Ride.tcx  TeamScream.tcx  Who_Dares_Whoop.fit  activity_4564516081.tcx  activity_607442311.tcx  dav_track_5k.tcx  twin_cities_marathon.tcx
tests/: test_pyfitparquet.py
tests/fixtures/: 60_min_Power_Zone_Endurance_Ride.tcx  Bolt_GPS.fit  Who_Dares_Bolt.fit  Who_Dares_Sufferfest.fit  new_river_50k.tcx
